--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,6 +10,9 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  # Define your Swarm Service name here for easy updates
+  # format: <stack_name>_<service_name>
+  SWARM_SERVICE_NAME: my_stack_gateway
 
 jobs:
   test:
@@ -38,6 +41,7 @@ jobs:
   build-and-push:
     needs: test
     runs-on: ubuntu-latest
+    # Only run this on push events to main or tags
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
     permissions:
       contents: read
@@ -61,7 +65,9 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          # Added "type=raw,value=latest" so pushes to main also tag as :latest
           tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=ref,event=branch
@@ -78,22 +84,24 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-
-  notify:
+  deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
-    if: success()
+    # Only deploy when pushing to main (Production)
+    if: github.ref == 'refs/heads/main'
+    
     steps:
-      - name: Trigger deployment
-        run: |
-          if [ -n "${{ secrets.DEPLOYMENT_WEBHOOK }}" ]; then
-            curl -X POST ${{ secrets.DEPLOYMENT_WEBHOOK }} \
-              -H 'Content-Type: application/json' \
-              -d '{
-                "service": "gateway",
-                "tag": "${{ github.ref_name }}",
-                "sha": "${{ github.sha }}"
-              }'
-          else
-            echo "DEPLOYMENT_WEBHOOK not configured, skipping notification"
-          fi
+      - name: Deploy to Swarm
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          script: |
+            # 1. Pull the latest image to ensure the node has the fresh layer
+            docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            
+            # 2. Update the service
+            # --with-registry-auth sends the registry credentials to the worker node
+            # --image ensures it resolves to the new digest of 'latest'
+            docker service update --image ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest ${{ env.SWARM_SERVICE_NAME }} --with-registry-auth
